# VibAccelKit

./: .gitignore  README.md  pyproject.toml  requirements.txt  vib_accelerator.py
examples/: process_folder.py  quickstart.py
examples/src/vibeaccelkit/: fds.py  io_mat.py  lalanne.py  viz.py
src/vibeaccelkit/: __init__.py  composite.py  ers.py  fds.py  io_ascii.py  io_ascii_.py  srs.py  stats.py  synth.py  validate.py  viz.py
src/vibeaccelkit.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
